test/official_tests/if/fun_in_then.lox
// error: {"line":2,"message":"expect expression","type":"ParseError"}
if (true) fun foo() {}
